parser.out
Grammar:

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID set_global ; programa2 programa3 PRINCIPAL ( ) bloque
Rule 2     set_global -> <empty>
Rule 3     programa2 -> empty
Rule 4     programa2 -> vars
Rule 5     programa3 -> empty
Rule 6     programa3 -> funcion programa3
Rule 7     vars -> VAR var1
Rule 8     var1 -> tipo set_type ids ; var2
Rule 9     set_type -> <empty>
Rule 10    var2 -> empty
Rule 11    var2 -> var1
Rule 12    ids -> identificadores ids2
Rule 13    ids2 -> empty
Rule 14    ids2 -> , ids
Rule 15    funcion -> FUNCTION funcion2 ID save_id parametros vars bloque
Rule 16    save_id -> <empty>
Rule 17    funcion2 -> VOID
Rule 18    funcion2 -> tipo
Rule 19    parametros -> ( parametros2 )
Rule 20    parametros2 -> tipo ID parametros3
Rule 21    parametros3 -> empty
Rule 22    parametros3 -> , parametros2
Rule 23    bloque -> { bloque2 }
Rule 24    bloque2 -> empty
Rule 25    bloque2 -> estatuto bloque2
Rule 26    estatuto -> regresa
Rule 27    estatuto -> estRepCond
Rule 28    estatuto -> estRepNoCond
Rule 29    estatuto -> estDesicion
Rule 30    estatuto -> lee
Rule 31    estatuto -> escritura
Rule 32    estatuto -> asignacion
Rule 33    asignacion -> identificadores asignacion_insert_var ASSIGN exp asignacion_pop_all ;
Rule 34    asignacion_insert_var -> <empty>
Rule 35    asignacion_pop_all -> <empty>
Rule 36    lee -> PRINT ( lee2 ) ;
Rule 37    lee2 -> identificadores lee3
Rule 38    lee3 -> empty
Rule 39    lee3 -> , lee2
Rule 40    escritura -> WRITE ( escritura2 ) ;
Rule 41    escritura2 -> STRING escritura3
Rule 42    escritura2 -> exp escritura3
Rule 43    escritura3 -> empty
Rule 44    escritura3 -> , escritura2
Rule 45    regresa -> RETURN ( exp ) ;
Rule 46    estDesicion -> IF ( expOR ) if_gotF bloque estDesicion2 if_fill_gotF
Rule 47    if_gotF -> <empty>
Rule 48    if_fill_gotF -> <empty>
Rule 49    estDesicion2 -> empty
Rule 50    estDesicion2 -> ELSE if_goto bloque
Rule 51    if_goto -> <empty>
Rule 52    estRepCond -> WHILE ( expOR ) DO bloque
Rule 53    estRepNoCond -> FROM identificadores ASSIGN exp TO exp DO2 bloque
Rule 54    identificadores -> ID identificadores2
Rule 55    identificadores2 -> empty
Rule 56    identificadores2 -> [ exp ] identificadores3
Rule 57    identificadores3 -> empty
Rule 58    identificadores3 -> [ exp ]
Rule 59    tipo -> FLOAT
Rule 60    tipo -> CHAR
Rule 61    tipo -> INT
Rule 62    expOR -> expAND expOR2
Rule 63    expOR2 -> empty
Rule 64    expOR2 -> OR expOR
Rule 65    expAND -> expresion expAND2
Rule 66    expAND2 -> empty
Rule 67    expAND2 -> AND expAND
Rule 68    expresion -> exp expresion2 quad_expresion
Rule 69    quad_expresion -> <empty>
Rule 70    expresion2 -> empty
Rule 71    expresion2 -> NE push_bool_op exp
Rule 72    expresion2 -> EGT push_bool_op exp
Rule 73    expresion2 -> ELT push_bool_op exp
Rule 74    expresion2 -> EQ push_bool_op exp
Rule 75    expresion2 -> GT push_bool_op exp
Rule 76    expresion2 -> LT push_bool_op exp
Rule 77    push_bool_op -> <empty>
Rule 78    exp -> termino exp2
Rule 79    exp2 -> empty
Rule 80    exp2 -> MINUS exp_op_insert exp  [precedence=left, level=1]
Rule 81    exp2 -> PLUS exp_op_insert exp  [precedence=left, level=1]
Rule 82    exp_op_insert -> <empty>
Rule 83    factor -> varcte
Rule 84    factor -> MINUS varcte plus_varcte  [precedence=left, level=1]
Rule 85    factor -> PLUS varcte plus_varcte  [precedence=left, level=1]
Rule 86    factor -> ( exp_par_start exp ) exp_par_end
Rule 87    exp_par_start -> <empty>
Rule 88    exp_par_end -> <empty>
Rule 89    plus_varcte -> <empty>
Rule 90    opmat -> factor opmat2
Rule 91    opmat2 -> empty
Rule 92    opmat2 -> DETERMINANT
Rule 93    opmat2 -> INVERSE
Rule 94    opmat2 -> TRANSPOSE
Rule 95    termino -> opmat termino2
Rule 96    termino2 -> empty
Rule 97    termino2 -> DIVIDE term_op_insert termino
Rule 98    termino2 -> TIMES term_op_insert termino
Rule 99    term_op_insert -> <empty>
Rule 100   llamada -> ID ( llamada2 )
Rule 101   llamada2 -> exp llamada3
Rule 102   llamada3 -> empty
Rule 103   llamada3 -> , llamada2
Rule 104   varcte -> llamada
Rule 105   varcte -> FLOATNUMBER
Rule 106   varcte -> CHARACTER
Rule 107   varcte -> INTNUMBER
Rule 108   varcte -> identificadores
Rule 109   empty -> <empty>

Terminals, with rules where they appear:

(                    : 1 19 36 40 45 46 52 86 100
)                    : 1 19 36 40 45 46 52 86 100
,                    : 14 22 39 44 103
;                    : 1 8 33 36 40 45
AND                  : 67
ASSIGN               : 33 53
CHAR                 : 60
CHARACTER            : 106
DETERMINANT          : 92
DIVIDE               : 97
DO                   : 52
DO2                  : 53
EGT                  : 72
ELSE                 : 50
ELT                  : 73
EQ                   : 74
FLOAT                : 59
FLOATNUMBER          : 105
FROM                 : 53
FUNCTION             : 15
GT                   : 75
ID                   : 1 15 20 54 100
IF                   : 46
INT                  : 61
INTNUMBER            : 107
INVERSE              : 93
LT                   : 76
MINUS                : 80 84
NE                   : 71
OR                   : 64
PLUS                 : 81 85
PRINCIPAL            : 1
PRINT                : 36
PROGRAM              : 1
RETURN               : 45
STRING               : 41
TIMES                : 98
TO                   : 53
TRANSPOSE            : 94
VAR                  : 7
VOID                 : 17
WHILE                : 52
WRITE                : 40
[                    : 56 58
]                    : 56 58
error                : 
{                    : 23
}                    : 23

Nonterminals, with rules where they appear:

asignacion           : 32
asignacion_insert_var : 33
asignacion_pop_all   : 33
bloque               : 1 15 46 50 52 53
bloque2              : 23 25
empty                : 3 5 10 13 21 24 38 43 49 55 57 63 66 70 79 91 96 102
escritura            : 31
escritura2           : 40 44
escritura3           : 41 42
estDesicion          : 29
estDesicion2         : 46
estRepCond           : 27
estRepNoCond         : 28
estatuto             : 25
exp                  : 33 42 45 53 53 56 58 68 71 72 73 74 75 76 80 81 86 101
exp2                 : 78
expAND               : 62 67
expAND2              : 65
expOR                : 46 52 64
expOR2               : 62
exp_op_insert        : 80 81
exp_par_end          : 86
exp_par_start        : 86
expresion            : 65
expresion2           : 68
factor               : 90
funcion              : 6
funcion2             : 15
identificadores      : 12 33 37 53 108
identificadores2     : 54
identificadores3     : 56
ids                  : 8 14
ids2                 : 12
if_fill_gotF         : 46
if_gotF              : 46
if_goto              : 50
lee                  : 30
lee2                 : 36 39
lee3                 : 37
llamada              : 104
llamada2             : 100 103
llamada3             : 101
opmat                : 95
opmat2               : 90
parametros           : 15
parametros2          : 19 22
parametros3          : 20
plus_varcte          : 84 85
programa             : 0
programa2            : 1
programa3            : 1 6
push_bool_op         : 71 72 73 74 75 76
quad_expresion       : 68
regresa              : 26
save_id              : 15
set_global           : 1
set_type             : 8
term_op_insert       : 97 98
termino              : 78 97 98
termino2             : 95
tipo                 : 8 18 20
var1                 : 7 11
var2                 : 8
varcte               : 83 84 85
vars                 : 4 15


state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID set_global ; programa2 programa3 PRINCIPAL ( ) bloque
    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .


state 2

    (1) programa -> PROGRAM . ID set_global ; programa2 programa3 PRINCIPAL ( ) bloque
    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . set_global ; programa2 programa3 PRINCIPAL ( ) bloque
    (2) set_global -> .
    ;               reduce using rule 2 (set_global -> .)

    set_global                     shift and go to state 4

state 4

    (1) programa -> PROGRAM ID set_global . ; programa2 programa3 PRINCIPAL ( ) bloque
    ;               shift and go to state 5


state 5

    (1) programa -> PROGRAM ID set_global ; . programa2 programa3 PRINCIPAL ( ) bloque
    (3) programa2 -> . empty
    (4) programa2 -> . vars
    (109) empty -> .
    (7) vars -> . VAR var1
    FUNCTION        reduce using rule 109 (empty -> .)
    PRINCIPAL       reduce using rule 109 (empty -> .)
    VAR             shift and go to state 9

    programa2                      shift and go to state 6
    empty                          shift and go to state 7
    vars                           shift and go to state 8

state 6

    (1) programa -> PROGRAM ID set_global ; programa2 . programa3 PRINCIPAL ( ) bloque
    (5) programa3 -> . empty
    (6) programa3 -> . funcion programa3
    (109) empty -> .
    (15) funcion -> . FUNCTION funcion2 ID save_id parametros vars bloque
    PRINCIPAL       reduce using rule 109 (empty -> .)
    FUNCTION        shift and go to state 13

    programa3                      shift and go to state 10
    empty                          shift and go to state 11
    funcion                        shift and go to state 12

state 7

    (3) programa2 -> empty .
    FUNCTION        reduce using rule 3 (programa2 -> empty .)
    PRINCIPAL       reduce using rule 3 (programa2 -> empty .)


state 8

    (4) programa2 -> vars .
    FUNCTION        reduce using rule 4 (programa2 -> vars .)
    PRINCIPAL       reduce using rule 4 (programa2 -> vars .)


state 9

    (7) vars -> VAR . var1
    (8) var1 -> . tipo set_type ids ; var2
    (59) tipo -> . FLOAT
    (60) tipo -> . CHAR
    (61) tipo -> . INT
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    INT             shift and go to state 18

    var1                           shift and go to state 14
    tipo                           shift and go to state 15

state 10

    (1) programa -> PROGRAM ID set_global ; programa2 programa3 . PRINCIPAL ( ) bloque
    PRINCIPAL       shift and go to state 19


state 11

    (5) programa3 -> empty .
    PRINCIPAL       reduce using rule 5 (programa3 -> empty .)


state 12

    (6) programa3 -> funcion . programa3
    (5) programa3 -> . empty
    (6) programa3 -> . funcion programa3
    (109) empty -> .
    (15) funcion -> . FUNCTION funcion2 ID save_id parametros vars bloque
    PRINCIPAL       reduce using rule 109 (empty -> .)
    FUNCTION        shift and go to state 13

    funcion                        shift and go to state 12
    programa3                      shift and go to state 20
    empty                          shift and go to state 11

state 13

    (15) funcion -> FUNCTION . funcion2 ID save_id parametros vars bloque
    (17) funcion2 -> . VOID
    (18) funcion2 -> . tipo
    (59) tipo -> . FLOAT
    (60) tipo -> . CHAR
    (61) tipo -> . INT
    VOID            shift and go to state 22
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    INT             shift and go to state 18

    funcion2                       shift and go to state 21
    tipo                           shift and go to state 23

state 14

    (7) vars -> VAR var1 .
    FUNCTION        reduce using rule 7 (vars -> VAR var1 .)
    PRINCIPAL       reduce using rule 7 (vars -> VAR var1 .)
    {               reduce using rule 7 (vars -> VAR var1 .)


state 15

    (8) var1 -> tipo . set_type ids ; var2
    (9) set_type -> .
    ID              reduce using rule 9 (set_type -> .)

    set_type                       shift and go to state 24

state 16

    (59) tipo -> FLOAT .
    ID              reduce using rule 59 (tipo -> FLOAT .)


state 17

    (60) tipo -> CHAR .
    ID              reduce using rule 60 (tipo -> CHAR .)


state 18

    (61) tipo -> INT .
    ID              reduce using rule 61 (tipo -> INT .)


state 19

    (1) programa -> PROGRAM ID set_global ; programa2 programa3 PRINCIPAL . ( ) bloque
    (               shift and go to state 25


state 20

    (6) programa3 -> funcion programa3 .
    PRINCIPAL       reduce using rule 6 (programa3 -> funcion programa3 .)


state 21

    (15) funcion -> FUNCTION funcion2 . ID save_id parametros vars bloque
    ID              shift and go to state 26


state 22

    (17) funcion2 -> VOID .
    ID              reduce using rule 17 (funcion2 -> VOID .)


state 23

    (18) funcion2 -> tipo .
    ID              reduce using rule 18 (funcion2 -> tipo .)


state 24

    (8) var1 -> tipo set_type . ids ; var2
    (12) ids -> . identificadores ids2
    (54) identificadores -> . ID identificadores2
    ID              shift and go to state 29

    ids                            shift and go to state 27
    identificadores                shift and go to state 28

state 25

    (1) programa -> PROGRAM ID set_global ; programa2 programa3 PRINCIPAL ( . ) bloque
    )               shift and go to state 30


state 26

    (15) funcion -> FUNCTION funcion2 ID . save_id parametros vars bloque
    (16) save_id -> .
    (               reduce using rule 16 (save_id -> .)

    save_id                        shift and go to state 31

state 27

    (8) var1 -> tipo set_type ids . ; var2
    ;               shift and go to state 32


state 28

    (12) ids -> identificadores . ids2
    (13) ids2 -> . empty
    (14) ids2 -> . , ids
    (109) empty -> .
    ,               shift and go to state 35
    ;               reduce using rule 109 (empty -> .)

    ids2                           shift and go to state 33
    empty                          shift and go to state 34

state 29

    (54) identificadores -> ID . identificadores2
    (55) identificadores2 -> . empty
    (56) identificadores2 -> . [ exp ] identificadores3
    (109) empty -> .
    [               shift and go to state 38
    ,               reduce using rule 109 (empty -> .)
    ;               reduce using rule 109 (empty -> .)
    ASSIGN          reduce using rule 109 (empty -> .)
    )               reduce using rule 109 (empty -> .)

    identificadores2               shift and go to state 36
    empty                          shift and go to state 37

state 30

    (1) programa -> PROGRAM ID set_global ; programa2 programa3 PRINCIPAL ( ) . bloque
    (23) bloque -> . { bloque2 }
    {               shift and go to state 40

    bloque                         shift and go to state 39

state 31

    (15) funcion -> FUNCTION funcion2 ID save_id . parametros vars bloque
    (19) parametros -> . ( parametros2 )
    (               shift and go to state 42

    parametros                     shift and go to state 41

state 32

    (8) var1 -> tipo set_type ids ; . var2
    (10) var2 -> . empty
    (11) var2 -> . var1
    (109) empty -> .
    (8) var1 -> . tipo set_type ids ; var2
    (59) tipo -> . FLOAT
    (60) tipo -> . CHAR
    (61) tipo -> . INT
    FUNCTION        reduce using rule 109 (empty -> .)
    PRINCIPAL       reduce using rule 109 (empty -> .)
    {               reduce using rule 109 (empty -> .)
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    INT             shift and go to state 18

    tipo                           shift and go to state 15
    var2                           shift and go to state 43
    empty                          shift and go to state 44
    var1                           shift and go to state 45

state 33

    (12) ids -> identificadores ids2 .
    ;               reduce using rule 12 (ids -> identificadores ids2 .)


state 34

    (13) ids2 -> empty .
    ;               reduce using rule 13 (ids2 -> empty .)


state 35

    (14) ids2 -> , . ids
    (12) ids -> . identificadores ids2
    (54) identificadores -> . ID identificadores2
    ID              shift and go to state 29

    ids                            shift and go to state 46
    identificadores                shift and go to state 28

state 36

    (54) identificadores -> ID identificadores2 .
    ,               reduce using rule 54 (identificadores -> ID identificadores2 .)
    ;               reduce using rule 54 (identificadores -> ID identificadores2 .)
    DETERMINANT     reduce using rule 54 (identificadores -> ID identificadores2 .)
    INVERSE         reduce using rule 54 (identificadores -> ID identificadores2 .)
    TRANSPOSE       reduce using rule 54 (identificadores -> ID identificadores2 .)
    DIVIDE          reduce using rule 54 (identificadores -> ID identificadores2 .)
    TIMES           reduce using rule 54 (identificadores -> ID identificadores2 .)
    MINUS           reduce using rule 54 (identificadores -> ID identificadores2 .)
    PLUS            reduce using rule 54 (identificadores -> ID identificadores2 .)
    ]               reduce using rule 54 (identificadores -> ID identificadores2 .)
    ASSIGN          reduce using rule 54 (identificadores -> ID identificadores2 .)
    )               reduce using rule 54 (identificadores -> ID identificadores2 .)
    NE              reduce using rule 54 (identificadores -> ID identificadores2 .)
    EGT             reduce using rule 54 (identificadores -> ID identificadores2 .)
    ELT             reduce using rule 54 (identificadores -> ID identificadores2 .)
    EQ              reduce using rule 54 (identificadores -> ID identificadores2 .)
    GT              reduce using rule 54 (identificadores -> ID identificadores2 .)
    LT              reduce using rule 54 (identificadores -> ID identificadores2 .)
    AND             reduce using rule 54 (identificadores -> ID identificadores2 .)
    OR              reduce using rule 54 (identificadores -> ID identificadores2 .)
    TO              reduce using rule 54 (identificadores -> ID identificadores2 .)
    DO2             reduce using rule 54 (identificadores -> ID identificadores2 .)


state 37

    (55) identificadores2 -> empty .
    ,               reduce using rule 55 (identificadores2 -> empty .)
    ;               reduce using rule 55 (identificadores2 -> empty .)
    ASSIGN          reduce using rule 55 (identificadores2 -> empty .)
    )               reduce using rule 55 (identificadores2 -> empty .)
    DETERMINANT     reduce using rule 55 (identificadores2 -> empty .)
    INVERSE         reduce using rule 55 (identificadores2 -> empty .)
    TRANSPOSE       reduce using rule 55 (identificadores2 -> empty .)
    DIVIDE          reduce using rule 55 (identificadores2 -> empty .)
    TIMES           reduce using rule 55 (identificadores2 -> empty .)
    MINUS           reduce using rule 55 (identificadores2 -> empty .)
    PLUS            reduce using rule 55 (identificadores2 -> empty .)
    ]               reduce using rule 55 (identificadores2 -> empty .)
    NE              reduce using rule 55 (identificadores2 -> empty .)
    EGT             reduce using rule 55 (identificadores2 -> empty .)
    ELT             reduce using rule 55 (identificadores2 -> empty .)
    EQ              reduce using rule 55 (identificadores2 -> empty .)
    GT              reduce using rule 55 (identificadores2 -> empty .)
    LT              reduce using rule 55 (identificadores2 -> empty .)
    AND             reduce using rule 55 (identificadores2 -> empty .)
    OR              reduce using rule 55 (identificadores2 -> empty .)
    TO              reduce using rule 55 (identificadores2 -> empty .)
    DO2             reduce using rule 55 (identificadores2 -> empty .)


state 38

    (56) identificadores2 -> [ . exp ] identificadores3
    (78) exp -> . termino exp2
    (95) termino -> . opmat termino2
    (90) opmat -> . factor opmat2
    (83) factor -> . varcte
    (84) factor -> . MINUS varcte plus_varcte
    (85) factor -> . PLUS varcte plus_varcte
    (86) factor -> . ( exp_par_start exp ) exp_par_end
    (104) varcte -> . llamada
    (105) varcte -> . FLOATNUMBER
    (106) varcte -> . CHARACTER
    (107) varcte -> . INTNUMBER
    (108) varcte -> . identificadores
    (100) llamada -> . ID ( llamada2 )
    (54) identificadores -> . ID identificadores2
    MINUS           shift and go to state 52
    PLUS            shift and go to state 53
    (               shift and go to state 54
    FLOATNUMBER     shift and go to state 56
    CHARACTER       shift and go to state 57
    INTNUMBER       shift and go to state 58
    ID              shift and go to state 60

    exp                            shift and go to state 47
    termino                        shift and go to state 48
    opmat                          shift and go to state 49
    factor                         shift and go to state 50
    varcte                         shift and go to state 51
    llamada                        shift and go to state 55
    identificadores                shift and go to state 59

state 39

    (1) programa -> PROGRAM ID set_global ; programa2 programa3 PRINCIPAL ( ) bloque .
    $end            reduce using rule 1 (programa -> PROGRAM ID set_global ; programa2 programa3 PRINCIPAL ( ) bloque .)


state 40

    (23) bloque -> { . bloque2 }
    (24) bloque2 -> . empty
    (25) bloque2 -> . estatuto bloque2
    (109) empty -> .
    (26) estatuto -> . regresa
    (27) estatuto -> . estRepCond
    (28) estatuto -> . estRepNoCond
    (29) estatuto -> . estDesicion
    (30) estatuto -> . lee
    (31) estatuto -> . escritura
    (32) estatuto -> . asignacion
    (45) regresa -> . RETURN ( exp ) ;
    (52) estRepCond -> . WHILE ( expOR ) DO bloque
    (53) estRepNoCond -> . FROM identificadores ASSIGN exp TO exp DO2 bloque
    (46) estDesicion -> . IF ( expOR ) if_gotF bloque estDesicion2 if_fill_gotF
    (36) lee -> . PRINT ( lee2 ) ;
    (40) escritura -> . WRITE ( escritura2 ) ;
    (33) asignacion -> . identificadores asignacion_insert_var ASSIGN exp asignacion_pop_all ;
    (54) identificadores -> . ID identificadores2
    }               reduce using rule 109 (empty -> .)
    RETURN          shift and go to state 71
    WHILE           shift and go to state 72
    FROM            shift and go to state 73
    IF              shift and go to state 75
    PRINT           shift and go to state 76
    WRITE           shift and go to state 77
    ID              shift and go to state 29

    bloque2                        shift and go to state 61
    empty                          shift and go to state 62
    estatuto                       shift and go to state 63
    regresa                        shift and go to state 64
    estRepCond                     shift and go to state 65
    estRepNoCond                   shift and go to state 66
    estDesicion                    shift and go to state 67
    lee                            shift and go to state 68
    escritura                      shift and go to state 69
    asignacion                     shift and go to state 70
    identificadores                shift and go to state 74

state 41

    (15) funcion -> FUNCTION funcion2 ID save_id parametros . vars bloque
    (7) vars -> . VAR var1
    VAR             shift and go to state 9

    vars                           shift and go to state 78

state 42

    (19) parametros -> ( . parametros2 )
    (20) parametros2 -> . tipo ID parametros3
    (59) tipo -> . FLOAT
    (60) tipo -> . CHAR
    (61) tipo -> . INT
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    INT             shift and go to state 18

    parametros2                    shift and go to state 79
    tipo                           shift and go to state 80

state 43

    (8) var1 -> tipo set_type ids ; var2 .
    FUNCTION        reduce using rule 8 (var1 -> tipo set_type ids ; var2 .)
    PRINCIPAL       reduce using rule 8 (var1 -> tipo set_type ids ; var2 .)
    {               reduce using rule 8 (var1 -> tipo set_type ids ; var2 .)


state 44

    (10) var2 -> empty .
    FUNCTION        reduce using rule 10 (var2 -> empty .)
    PRINCIPAL       reduce using rule 10 (var2 -> empty .)
    {               reduce using rule 10 (var2 -> empty .)


state 45

    (11) var2 -> var1 .
    FUNCTION        reduce using rule 11 (var2 -> var1 .)
    PRINCIPAL       reduce using rule 11 (var2 -> var1 .)
    {               reduce using rule 11 (var2 -> var1 .)


state 46

    (14) ids2 -> , ids .
    ;               reduce using rule 14 (ids2 -> , ids .)


state 47

    (56) identificadores2 -> [ exp . ] identificadores3
    ]               shift and go to state 81


state 48

    (78) exp -> termino . exp2
    (79) exp2 -> . empty
    (80) exp2 -> . MINUS exp_op_insert exp
    (81) exp2 -> . PLUS exp_op_insert exp
    (109) empty -> .
    MINUS           shift and go to state 84
    PLUS            shift and go to state 85
    ]               reduce using rule 109 (empty -> .)
    )               reduce using rule 109 (empty -> .)
    ,               reduce using rule 109 (empty -> .)
    NE              reduce using rule 109 (empty -> .)
    EGT             reduce using rule 109 (empty -> .)
    ELT             reduce using rule 109 (empty -> .)
    EQ              reduce using rule 109 (empty -> .)
    GT              reduce using rule 109 (empty -> .)
    LT              reduce using rule 109 (empty -> .)
    AND             reduce using rule 109 (empty -> .)
    OR              reduce using rule 109 (empty -> .)
    TO              reduce using rule 109 (empty -> .)
    ;               reduce using rule 109 (empty -> .)
    DO2             reduce using rule 109 (empty -> .)

    exp2                           shift and go to state 82
    empty                          shift and go to state 83

state 49

    (95) termino -> opmat . termino2
    (96) termino2 -> . empty
    (97) termino2 -> . DIVIDE term_op_insert termino
    (98) termino2 -> . TIMES term_op_insert termino
    (109) empty -> .
    DIVIDE          shift and go to state 88
    TIMES           shift and go to state 89
    MINUS           reduce using rule 109 (empty -> .)
    PLUS            reduce using rule 109 (empty -> .)
    ]               reduce using rule 109 (empty -> .)
    )               reduce using rule 109 (empty -> .)
    ,               reduce using rule 109 (empty -> .)
    NE              reduce using rule 109 (empty -> .)
    EGT             reduce using rule 109 (empty -> .)
    ELT             reduce using rule 109 (empty -> .)
    EQ              reduce using rule 109 (empty -> .)
    GT              reduce using rule 109 (empty -> .)
    LT              reduce using rule 109 (empty -> .)
    AND             reduce using rule 109 (empty -> .)
    OR              reduce using rule 109 (empty -> .)
    TO              reduce using rule 109 (empty -> .)
    ;               reduce using rule 109 (empty -> .)
    DO2             reduce using rule 109 (empty -> .)

    termino2                       shift and go to state 86
    empty                          shift and go to state 87

state 50

    (90) opmat -> factor . opmat2
    (91) opmat2 -> . empty
    (92) opmat2 -> . DETERMINANT
    (93) opmat2 -> . INVERSE
    (94) opmat2 -> . TRANSPOSE
    (109) empty -> .
    DETERMINANT     shift and go to state 92
    INVERSE         shift and go to state 93
    TRANSPOSE       shift and go to state 94
    DIVIDE          reduce using rule 109 (empty -> .)
    TIMES           reduce using rule 109 (empty -> .)
    MINUS           reduce using rule 109 (empty -> .)
    PLUS            reduce using rule 109 (empty -> .)
    ]               reduce using rule 109 (empty -> .)
    )               reduce using rule 109 (empty -> .)
    ,               reduce using rule 109 (empty -> .)
    NE              reduce using rule 109 (empty -> .)
    EGT             reduce using rule 109 (empty -> .)
    ELT             reduce using rule 109 (empty -> .)
    EQ              reduce using rule 109 (empty -> .)
    GT              reduce using rule 109 (empty -> .)
    LT              reduce using rule 109 (empty -> .)
    AND             reduce using rule 109 (empty -> .)
    OR              reduce using rule 109 (empty -> .)
    TO              reduce using rule 109 (empty -> .)
    ;               reduce using rule 109 (empty -> .)
    DO2             reduce using rule 109 (empty -> .)

    opmat2                         shift and go to state 90
    empty                          shift and go to state 91

state 51

    (83) factor -> varcte .
    DETERMINANT     reduce using rule 83 (factor -> varcte .)
    INVERSE         reduce using rule 83 (factor -> varcte .)
    TRANSPOSE       reduce using rule 83 (factor -> varcte .)
    DIVIDE          reduce using rule 83 (factor -> varcte .)
    TIMES           reduce using rule 83 (factor -> varcte .)
    MINUS           reduce using rule 83 (factor -> varcte .)
    PLUS            reduce using rule 83 (factor -> varcte .)
    ]               reduce using rule 83 (factor -> varcte .)
    )               reduce using rule 83 (factor -> varcte .)
    ,               reduce using rule 83 (factor -> varcte .)
    NE              reduce using rule 83 (factor -> varcte .)
    EGT             reduce using rule 83 (factor -> varcte .)
    ELT             reduce using rule 83 (factor -> varcte .)
    EQ              reduce using rule 83 (factor -> varcte .)
    GT              reduce using rule 83 (factor -> varcte .)
    LT              reduce using rule 83 (factor -> varcte .)
    AND             reduce using rule 83 (factor -> varcte .)
    OR              reduce using rule 83 (factor -> varcte .)
    TO              reduce using rule 83 (factor -> varcte .)
    ;               reduce using rule 83 (factor -> varcte .)
    DO2             reduce using rule 83 (factor -> varcte .)


state 52

    (84) factor -> MINUS . varcte plus_varcte
    (104) varcte -> . llamada
    (105) varcte -> . FLOATNUMBER
    (106) varcte -> . CHARACTER
    (107) varcte -> . INTNUMBER
    (108) varcte -> . identificadores
    (100) llamada -> . ID ( llamada2 )
    (54) identificadores -> . ID identificadores2
    FLOATNUMBER     shift and go to state 56
    CHARACTER       shift and go to state 57
    INTNUMBER       shift and go to state 58
    ID              shift and go to state 60

    varcte                         shift and go to state 95
    llamada                        shift and go to state 55
    identificadores                shift and go to state 59

state 53

    (85) factor -> PLUS . varcte plus_varcte
    (104) varcte -> . llamada
    (105) varcte -> . FLOATNUMBER
    (106) varcte -> . CHARACTER
    (107) varcte -> . INTNUMBER
    (108) varcte -> . identificadores
    (100) llamada -> . ID ( llamada2 )
    (54) identificadores -> . ID identificadores2
    FLOATNUMBER     shift and go to state 56
    CHARACTER       shift and go to state 57
    INTNUMBER       shift and go to state 58
    ID              shift and go to state 60

    varcte                         shift and go to state 96
    llamada                        shift and go to state 55
    identificadores                shift and go to state 59

state 54

    (86) factor -> ( . exp_par_start exp ) exp_par_end
    (87) exp_par_start -> .
    MINUS           reduce using rule 87 (exp_par_start -> .)
    PLUS            reduce using rule 87 (exp_par_start -> .)
    (               reduce using rule 87 (exp_par_start -> .)
    FLOATNUMBER     reduce using rule 87 (exp_par_start -> .)
    CHARACTER       reduce using rule 87 (exp_par_start -> .)
    INTNUMBER       reduce using rule 87 (exp_par_start -> .)
    ID              reduce using rule 87 (exp_par_start -> .)

    exp_par_start                  shift and go to state 97

state 55

    (104) varcte -> llamada .
    DETERMINANT     reduce using rule 104 (varcte -> llamada .)
    INVERSE         reduce using rule 104 (varcte -> llamada .)
    TRANSPOSE       reduce using rule 104 (varcte -> llamada .)
    DIVIDE          reduce using rule 104 (varcte -> llamada .)
    TIMES           reduce using rule 104 (varcte -> llamada .)
    MINUS           reduce using rule 104 (varcte -> llamada .)
    PLUS            reduce using rule 104 (varcte -> llamada .)
    ]               reduce using rule 104 (varcte -> llamada .)
    )               reduce using rule 104 (varcte -> llamada .)
    ,               reduce using rule 104 (varcte -> llamada .)
    NE              reduce using rule 104 (varcte -> llamada .)
    EGT             reduce using rule 104 (varcte -> llamada .)
    ELT             reduce using rule 104 (varcte -> llamada .)
    EQ              reduce using rule 104 (varcte -> llamada .)
    GT              reduce using rule 104 (varcte -> llamada .)
    LT              reduce using rule 104 (varcte -> llamada .)
    AND             reduce using rule 104 (varcte -> llamada .)
    OR              reduce using rule 104 (varcte -> llamada .)
    TO              reduce using rule 104 (varcte -> llamada .)
    ;               reduce using rule 104 (varcte -> llamada .)
    DO2             reduce using rule 104 (varcte -> llamada .)


state 56

    (105) varcte -> FLOATNUMBER .
    DETERMINANT     reduce using rule 105 (varcte -> FLOATNUMBER .)
    INVERSE         reduce using rule 105 (varcte -> FLOATNUMBER .)
    TRANSPOSE       reduce using rule 105 (varcte -> FLOATNUMBER .)
    DIVIDE          reduce using rule 105 (varcte -> FLOATNUMBER .)
    TIMES           reduce using rule 105 (varcte -> FLOATNUMBER .)
    MINUS           reduce using rule 105 (varcte -> FLOATNUMBER .)
    PLUS            reduce using rule 105 (varcte -> FLOATNUMBER .)
    ]               reduce using rule 105 (varcte -> FLOATNUMBER .)
    )               reduce using rule 105 (varcte -> FLOATNUMBER .)
    ,               reduce using rule 105 (varcte -> FLOATNUMBER .)
    NE              reduce using rule 105 (varcte -> FLOATNUMBER .)
    EGT             reduce using rule 105 (varcte -> FLOATNUMBER .)
    ELT             reduce using rule 105 (varcte -> FLOATNUMBER .)
    EQ              reduce using rule 105 (varcte -> FLOATNUMBER .)
    GT              reduce using rule 105 (varcte -> FLOATNUMBER .)
    LT              reduce using rule 105 (varcte -> FLOATNUMBER .)
    AND             reduce using rule 105 (varcte -> FLOATNUMBER .)
    OR              reduce using rule 105 (varcte -> FLOATNUMBER .)
    TO              reduce using rule 105 (varcte -> FLOATNUMBER .)
    ;               reduce using rule 105 (varcte -> FLOATNUMBER .)
    DO2             reduce using rule 105 (varcte -> FLOATNUMBER .)


state 57
